src/objects/OrderApi__Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>Optional shipping postal code for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &apos;&quot;Shipping Postal Code&quot; field.</description>
        <inlineHelpText>Optional shipping postal code for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &apos;&quot;Shipping Postal Code&quot; field.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>Optional shipping state for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping State&quot; field.</description>
        <inlineHelpText>Optional shipping state for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping State&quot; field.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>Optional shipping street for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping Street&quot; field.</description>
        <inlineHelpText>Optional shipping street for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping Street&quot; field.</inlineHelpText>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Tracking_Number__c</fullName>
        <description>Field for admins to input a Shipping Tracking Number.</description>
        <inlineHelpText>Enter the Tracking Number of the shipment that includes this item.</inlineHelpText>
        <label>Shipping Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Sales Order Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Sales Order Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Start_Date__c</fullName>
        <description>The date in this field defines the subscription&apos;s start date.</description>
        <inlineHelpText>The date in this field defines the subscription&apos;s start date.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription that is being upgraded or renewed.</description>
        <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
        <label>Subscription (Upgrade/Renew)</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Sale Price * Quantity</description>
        <formula>IF(NOT(ISBLANK(OrderApi__Sale_Price__c)) &amp;&amp; NOT(ISBLANK(OrderApi__Quantity__c)), OrderApi__Sale_Price__c * OrderApi__Quantity__c, OrderApi__Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Sale Price * Quantity</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__System_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**SYSTEM** Overrides the calculation of price and Price rule. Default is unchecked.</description>
        <inlineHelpText>**SYSTEM** Overrides the calculation of price and Price rule. Default is unchecked.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to override any tax calculations by the system.</description>
        <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
        <label>Tax Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Combined with the Parent Sale Order Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
        <inlineHelpText>Combined with the Parent Sale Order Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total_Installment_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated** Total amount of all the installments created as a result of this sales order line.</description>
        <inlineHelpText>**System Calculated** Total amount of all the installments created as a result of this sales order line.</inlineHelpText>
        <label>SYSTEM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated** Total amount of Sales Order Line</description>
        <inlineHelpText>**System Calculated** Total amount of Sales Order Line</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROEApi__Group_Registration_Key__c</fullName>
        <description>** SYSTEM ** Unique Group Registration Key</description>
        <inlineHelpText>** SYSTEM ** Unique Group Registration Key</inlineHelpText>
        <label>SYSTEM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sales Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>